--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,18 +1,22 @@
 doctype html
 html
   head
-    title= title
+    meta(charset='utf-8')
 
-    // Viewport mobile tag for sensible mobile support
+    title= sails.pjson.name
+
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name="viewport",content="width=device-width, initial-scale=1, maximum-scale=1")
+    link(type='text/css', rel='stylesheet', href='/styles/bootstrap.min.css')
+    link(type='text/css', rel='stylesheet', href='/styles/app.css')
 
     block styles
 
   body
-    block body
+    .container
+      block body
 
-    // The linker searches for this tag and adds js.  If there's no linker, we point to sails.io.js
-    // SCRIPTS
-    script(src="/js/dependencies/sails.io.js")
-    // SCRIPTS END
-
+    // script(src="/js/sails.io.js")
+    script(src="/js/dependencies/jquery-2.1.1.min.js")
+    script(src="/js/dependencies/bootstrap.min.js")
+    script(src="/js/app.js")
