--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,4 +19,6 @@ html
     // script(src="/js/sails.io.js")
     script(src="/js/dependencies/jquery-2.1.1.min.js")
     script(src="/js/dependencies/bootstrap.min.js")
+    script(src="/js/dependencies/react.min.js")
     script(src="/js/app.js")
+    block scripts
