--- a/views/main/setup.jade
+++ b/views/main/setup.jade
@@ -37,3 +37,9 @@ block body
         li
           code LOG_EXT_INFO
           | &nbsp; log extra details
+        li
+          code NEW_RELIC_LICENSE_KEY
+          | &nbsp; New Relic license key
+        li
+          code NEW_RELIC_APP_NAME
+          | &nbsp; New Relic app name
