--- a/views/main/setup.jade
+++ b/views/main/setup.jade
@@ -29,6 +29,9 @@ block body
       h2.h5 Optional Environment Variables:
       ul
         li
+          code MINIMUM_SYNC_RATE
+          | &nbsp; skip syncing if URL requested again in x seconds
+        li
           code LOG_FILE_PATH
           | &nbsp; store logs in a file
         li
